name:                blaze-json
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Hirotomo Moriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.Blaze.JSON
                     , Text.Blaze.JSON.Class
                     , Text.Blaze.JSON.Internal
  build-depends:       base               >=4.6  && <4.9
                     , text               >=1.1  && <1.3
                     , bytestring         >=0.10 && <0.11
                     , containers         >=0.5  && <0.6
                     , data-default-class <0.1
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tasty
  main-is:             tasty.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , text
                     , blaze-json
                     , tasty                >=0.10 && <0.11
                     , tasty-quickcheck     >=0.8  && <0.9
                     , QuickCheck           >=2.7  && <2.9
                     , aeson                >=0.7  && <0.9
                     , scientific           >=0.3  && <0.4
                     , vector               >=0.10 && <0.11
                     , unordered-containers >=0.2  && <0.3
  hs-source-dirs:      tests
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite doctest
  main-is:             doctest.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , doctest              >=0.9  && <0.10
  hs-source-dirs:      tests
  ghc-options:         -Wall
  default-language:    Haskell2010
